# local-llm-quant-bench

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml  experiment.yaml  generation.yaml  models.yaml  qwen3_5_9b_config.yaml
docs/: QUICKSTART.md  feature_branches.md  llama_cpp_quick_start.md  report_template.md
prompts/: golden_answers.jsonl  prompts.jsonl
prompts/prompt_sets/: coding.jsonl  extraction.jsonl  reasoning.jsonl  summarization.jsonl
results/runs/20260406_110136/: config_snapshot.yaml  observations.jsonl  run_meta.json  summary.json  summary.md  system_snapshot.json
results/runs/20260406_150036/: config_snapshot.yaml  notes.md  observations.jsonl  prompts_snapshot.jsonl  run_meta.json  summary.json  summary.md
scripts/: context_scale_test.py  init_run.py  log_metrics.py  summarize_benchmark.py  system_snapshot.py
src/quantbench/: __init__.py  cli.py  config.py  metrics.py  models.py  orchestrator.py  prompts.py
src/quantbench/quality/: __init__.py  reference.py  rubrics.py  scorer.py
src/quantbench/reporting/: summary.py  writer.py
src/quantbench/runners/: base.py  llamacpp_runner.py  llamacpp_server_runner.py  transformers_runner.py
src/quantbench/utils/: logging_utils.py  system_info.py  timers.py
tests/: test_base_runner.py  test_config.py  test_llamacpp_runner.py  test_logging_utils.py  test_metrics.py  test_models.py  test_orchestrator.py  test_quality.py  test_system_info.py  test_timers.py
