[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-llm-quant-bench"
version = "0.1.0"
description = "Quantization benchmarking suite for local LLMs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Developer"}
]
keywords = ["llm", "quantization", "benchmarking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2,<3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
llama-cpp = [
    "llama-cpp-python>=0.2.0",
]
transformers = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
]

[project.scripts]
quantbench = "src.quantbench.cli:main"

[project.urls]
Repository = "https://github.com/user/local-llm-quant-bench"
Issues = "https://github.com/user/local-llm-quant-bench/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/quantbench"]

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py39"
line-length = 100
select = [
    "E",
    "F",
    "W",
    "I",
]
ignore = [
    "E501",  # Line too long; black is responsible for this
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pycache__",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
